Integration with `user-service`

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5,5 +5,30 @@ title:
   address-list:
     has-data: "Here is a list of addresses I found:"
     empty: "Nothing was found :("
+registration:
+  message:
+    text: "Oops\\! It seems you don't have a unified account used throughout the whole ecosystem of [SadBot\\.Dev bots](https://t.me/kozalo_blog/7) network\\. To create a new one and use this command, you have to accept the following user agreement and allow us to store your settings and preferences\\."
+    button: "Accept"
+  consent:
+    ok: "Your account has been created successfully!"
+    appendix: "_Accepted by the *%{username}*_\n\nThank you\\! Now you can invoke the command again\\."
+set-option:
+  language:
+    success: "👌🏼👍🏼"
+    unsupported: "Unfortunately, this language is not supported yet\\. It would be very nice if you contribute to our project and help us to [translate](https://github.com/kozalosev/LocPlaceBot/blob/main/locales/en.yml) the bot to your language\\."
+  location:
+    message:
+      text: "Send me your location, please"
+      button: "Send the location"
+    confirmation:
+      text: "Do you really want to set your location to a point above?"
+      button: "Yes, I do!"
+      remove-keyboard: "_Removing the reply keyboard…_"
+    success: "Your location has been saved successfully!"
 error:
   old-message: "The message is too old :("
+  service:
+    user:
+      disabled: "Sorry\\. This command is temporary unavailable\\."
+  callbacks:
+    another-person: "This button is intended not for you!"
