--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -7,28 +7,28 @@ title:
     empty: "Ничего не удалось найти :("
 registration:
   message:
-    text: "Упс\\! Кажется, у Вас нет единого аккаунта в нашей [экосистеме ботов](https://t.me/kozalo_blog/7)\\. Чтобы воспользоваться данной командой, нужно принять условия соглашения, приведённого ниже, и разрешить хранение настроек в нашем сервисе."
+    text: "Упс! Кажется, у Вас нет единого аккаунта в нашей <a href=\"https://t.me/kozalo_blog/7\">экосистеме ботов</a>. Чтобы воспользоваться данной командой, нужно принять условия соглашения, приведённого ниже, и разрешить хранение настроек в нашем сервисе."
     button: "Принять"
   consent:
     ok: "Аккаунт успешно создан!"
-    appendix: "_Акцептировано *%{username}*_\n\nБлагодарю за понимание\\! Теперь можно вызвать команду снова\\."
+    appendix: "<i>Акцептировано <b>%{username}</b></i>\n\nБлагодарю за понимание! Теперь можно вызвать команду снова."
 set-option:
   language:
     success: "👌🏼👍🏼"
-    unsupported: "К сожалению, данный язык пока не поддерживается\\. Было бы очень круто, если бы Вы помогли нам [перевести](https://github.com/kozalosev/LocPlaceBot/blob/main/locales/en.yml) бота на него\\."
+    unsupported: "К сожалению, данный язык пока не поддерживается. Было бы очень круто, если бы Вы помогли нам <a href=\"https://github.com/kozalosev/LocPlaceBot/blob/main/locales/en.yml\">перевести</a> бота на него."
   location:
     message:
       text: "Отправьте мне своё местоположение, пожалуйста"
       button: "Отправить местоположение"
-    confirmation:
-      text: "Вы действительно хотите установить своим местоположением точку, обозначенную выше?"
-      button: "Ага!"
-      remove-keyboard: "_Подчищаю клавиатуру с кнопкой ответа…_"
     success: "Местоположение успешно сохранено!"
+    remove-keyboard: "<i>Подчищаю клавиатуру с кнопкой ответа…</i>"
 error:
   old-message: "Сообщение слишком старое :("
   service:
     user:
-      disabled: "Простите, но данная команда временно недоступна\\."
+      disabled: "Простите, но данная команда временно недоступна."
   callbacks:
     another-person: "Данная кнопка не для тебя!"
+dialogue:
+  cancel:
+    button: "Отменить"
