--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -5,6 +5,12 @@ title:
   address-list:
     has-data: "Список адресов, которые я нашёл:"
     empty: "Ничего не удалось найти :("
+cmd-description:
+  help: "вывести справку"
+  loc: "для поиска в групповых чатах"
+  set:
+    language: "сменить язык"
+    location: "уточни своё местоположение для более релевантных результатов"
 registration:
   message:
     text: "Упс! Кажется, у Вас нет единого аккаунта в нашей <a href=\"https://t.me/kozalo_blog/7\">экосистеме ботов</a>. Чтобы воспользоваться данной командой, нужно принять условия соглашения, приведённого ниже, и разрешить хранение настроек в нашем сервисе."
