--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -17,7 +17,7 @@ registration:
     button: "Принять"
   consent:
     ok: "Аккаунт успешно создан!"
-    appendix: "<i>Акцептировано <b>%{username}</b></i>\n\nБлагодарю за понимание! Теперь можно вызвать команду снова."
+    appendix: "<i>Акцептировано <b>%{username}</b></i>\n\nБлагодарю за понимание!"
 set-option:
   language:
     success: "👌🏼👍🏼"
