Fix #13 — Reply to the empty `/loc` command by an error message

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -29,6 +29,8 @@ set-option:
     success: "Your location has been saved successfully!"
     remove-keyboard: "<i>Removing the reply keyboard…</i>"
 error:
+  query:
+    empty: "Please, specify a place you want to find when invoking the command: `/loc Eiffel Tower` for example."
   old-message: "The message is too old :("
   service:
     user:
