--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -13,7 +13,7 @@ cmd-description:
     location: "уточни своё местоположение для более релевантных результатов"
 registration:
   message:
-    text: "Упс! Кажется, у Вас нет единого аккаунта в нашей <a href=\"https://t.me/kozalo_blog/7\">экосистеме ботов</a>. Чтобы воспользоваться данной командой, нужно принять условия соглашения, приведённого ниже, и разрешить хранение настроек в нашем сервисе."
+    text: "Упс! Кажется, у Вас нет единого аккаунта в нашей <a href=\"https://t.me/kozaloru/672\">экосистеме ботов</a>. Чтобы воспользоваться данной командой, нужно принять условия соглашения, приведённого ниже, и разрешить хранение настроек в нашем сервисе."
     button: "Принять"
   consent:
     ok: "Аккаунт успешно создан!"
@@ -29,6 +29,8 @@ set-option:
     success: "Местоположение успешно сохранено!"
     remove-keyboard: "<i>Подчищаю клавиатуру с кнопкой ответа…</i>"
 error:
+  query:
+    empty: "Пожалуйста, при вызове команды укажите место, которое хотите найти: `/loc Эйфелева башня`, например."
   old-message: "Сообщение слишком старое :("
   service:
     user:
