--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -21,6 +21,7 @@ registration:
 set-option:
   language:
     success: "👌🏼👍🏼"
+    empty: "Пожалуйста, при вызове команды укажите код языка: <code>/setlang en</code>, например."
     unsupported: "К сожалению, данный язык пока не поддерживается. Было бы очень круто, если бы Вы помогли нам <a href=\"https://github.com/kozalosev/LocPlaceBot/blob/main/locales/en.yml\">перевести</a> бота на него."
   location:
     message:
